--- a/part5/bloglist-frontend/src/index.css
+++ b/part5/bloglist-frontend/src/index.css
@@ -15,3 +15,16 @@ body {
 .success {
   color: rgb(24, 224, 24);
 }
+
+.blog {
+  padding-top: 10px;
+  padding-left: 2px;
+  border: solid;
+  border-width: 1px;
+  margin-bottom: 5px;
+}
+
+button {
+  margin: 5px;
+  padding: 5px;
+}
