--- a/part7/blog-list/src/index.css
+++ b/part7/blog-list/src/index.css
@@ -1,30 +1,7 @@
-body {
-  padding: 10px;
-}
-.message {
-  padding: 15px;
-  margin-bottom: 15px;
-  font-size: 25px;
-  background-color: rgb(240, 240, 240);
+.m-t {
+  margin-top: 20px;
 }
 
-.error {
-  color: red;
-}
-
-.success {
-  color: rgb(24, 224, 24);
-}
-
-.blog {
-  padding-top: 10px;
-  padding-left: 2px;
-  border: solid;
-  border-width: 1px;
-  margin-bottom: 5px;
-}
-
-button {
-  margin: 5px;
-  padding: 5px;
+Button {
+  margin-left: 5px;
 }
